opam-version: "2.0"
name: "kxclib"
version: "~dev"
synopsis: "Common utilities maintained by KXC"
maintainer: "Haochen Xie <hx@kxc.io>"
authors: "Haochen Xie <hx@kxc.io>"
license: "MIT"
homepage: "https://github.com/kxcteam/kxclib-ocaml"
bug-reports: "https://github.com/kxcteam/kxclib-ocaml/issues"
dev-repo: "git+https://github.com:kxcteam/kxclib-ocaml.git"
depends: [
  "ocaml"
  "dune"
  "ppxlib" { >= "0.12"}
  "ppx_inline_test" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {test}
]
available: ["ocaml" >= "4.07.1"]

