(library
 (name kxclib_jsoo)
 (public_name kxclib-jsoo)
 (libraries
   kxclib_jsoo_core
   kxclib_jsoo_js
   js_of_ocaml prr)
 (modules kxclib_jsoo futexn_io)
 (preprocess (pps ppx_optcomp js_of_ocaml-ppx)))

(library
 (name kxclib_jsoo_core)
 (public_name kxclib-jsoo.core)
 (libraries
   js_of_ocaml prr)
 (implements kxclib)
 (modules kxclib)
 (preprocess (pps ppx_optcomp js_of_ocaml-ppx)))

(rule (copy ../classic/kxclib.ml kxclib.ml))

(library
 (name kxclib_jsoo_js)
 (public_name kxclib-jsoo.js)
 (libraries
   kxclib_jsoo_core
   js_of_ocaml prr)
 (implements kxclib_js)
 (modules kxclib_js)
 (preprocess (pps ppx_optcomp js_of_ocaml-ppx)))
