(rule
 (mode (promote (into src)))
 (target kxclib.ml)
 (deps kxclib.pp.ml kxclib_comp_re.ml)
 (action
  (with-stdout-to %{target}
   (progn
    (cat kxclib_comp_re.ml)
    (echo "\nopen Kxclib_comp\n")
    (echo "\n[@@@warning \"-3-44\"]\n")
    (cat kxclib.pp.ml)))))

(rule
 (target kxclib_src.ml)
 (deps ../kxclib.ml)
 (action
  (with-stdout-to %{target}
   (progn
    (echo "[%%define os_type \"re\"]\n")
    (cat %{deps})))))

(library
 (name kxclib_src)
 (modules kxclib_src)
 (preprocess (pps ppx_deriving.std ppx_optcomp)))

(rule
 (target kxclib.pp.ml)
 (deps kxclib_src.pp.ml)
 (action
  (with-stderr-to %{target}
    (run %{bin:ocamlc} -stop-after parsing -dsource %{deps}))))

(dirs :standard \ node_modules)
