(tests
 (names
   baselib_unit_tests
   baselib_json_prop_tests
   baselib_json_jcsnafi_prop_tests
   baselib_jvpath_prop_tests
   log0_unit_tests)
 (libraries
   kxclib kxclib_priv_test_lib
   alcotest qcheck)
 (preprocess (pps ppx_optcomp))
 (flags (:standard
          -open Kxclib)))

(rule (copy ../test_data/jcsnafi_test_data.ml jcsnafi_test_data.ml))
