(library
 (name yojson_compat)
 (public_name kxclib.yojson_compat)
 (preprocess (pps ppx_optcomp))
 (preprocessor_deps lib_versions.mlh)
 (modes melange byte native))

(rule
 (target lib_versions.mlh)
 (action
  (with-stdout-to %{target}
   (pipe-stdout
    (echo "[%%define YOJSON_VERSION (%{version:yojson})]")
    (bash "sed 's/\\./,/g'")))))
