(executables
 (names jsoo_unit_tests)
 (optional)
 (libraries
   alcotest qcheck
   kxclib kxclib_jsoo
   kxclib_priv_test_lib
   js_of_ocaml
 )
 (modes js)
 (js_of_ocaml
  (javascript_files additional_stubs.js))
 (flags (:standard
          -open Kxclib
          -open Kxclib_jsoo)))

(rule
 (action (run %{bin:node} %{deps}))
 ; (deps ./jsoo_unit_tests.js)
 (deps ./jsoo_unit_tests.bc.js)
 (alias runtest))
