(tests
 (names
   jsoo_unit_tests
   baselib_unit_tests
   baselib_json_prop_tests
   baselib_jvpath_prop_tests
   baselib_json_jcsnafi_prop_tests)
 (libraries
   alcotest qcheck
   kxclib_jsoo_core kxclib_jsoo_js
   kxclib_priv_test_lib
   js_of_ocaml
 )
 (modes js)
 (js_of_ocaml
  (javascript_files additional_stubs.js))
 (preprocess (pps ppx_optcomp))
 (flags (:standard
          -open Kxclib
          -open Kxclib_js))
 (action (run node --stack-size=128000 %{test})))

(rule (copy ../../unit_test/baselib_unit_tests.ml baselib_unit_tests.ml))
(rule (copy ../../unit_test/baselib_json_prop_tests.ml baselib_json_prop_tests.ml))
(rule (copy ../../unit_test/baselib_jvpath_prop_tests.ml baselib_jvpath_prop_tests.ml))
(rule (copy ../../unit_test/baselib_json_jcsnafi_prop_tests.ml baselib_json_jcsnafi_prop_tests.ml))

(rule (copy ../../test_data/jcsnafi_test_data.ml jcsnafi_test_data.ml))
